<resources>
    <string name="app_name">mento</string>
    <string name="vector">vector</string>
    <string name="vector_ek1">vector_ek1</string>
    <string name="_1k_string">1k</string>
    <string name="_420_string">420</string>
    <string name="_69_string">69</string>
    <string name="description_string">Description</string>
    <string name="username_string">Username</string>
    <string name="vector_ek2">vector_ek2</string>
    <string name="vector_ek3">vector_ek3</string>
    <string name="vector_ek4">vector_ek4</string>
    <string name="vector_ek5">vector_ek5</string>
    <string name="vector_ek6">vector_ek6</string>
    <string name="vector_ek7">vector_ek7</string>
    <string name="vector_ek8">vector_ek8</string>
    <string name="rectangle_13">rectangle_13</string>
    <string name="img_rectangle_40">__img___rectangle_40</string>
    <string name="img_vector">__img___vector</string>
    <string name="img_group_65">__img___group_65</string>
    <string name="img_group_64">__img___group_64</string>
    <string name="img_group_63">__img___group_63</string>
    <string name="img_group_66">__img___group_66</string>
    <string name="vectorz">vector</string>
    <string name="vector_ek1z">vector_ek1</string>
    <string name="vector_ek2z">vector_ek2</string>
    <string name="vector_ek3z">vector_ek3</string>
    <string name="rectangle_13z">rectangle_13</string>
    <string name="img_rectangle_41">__img___rectangle_41</string>
    <string name="vector_ek4z">vector_ek4</string>
    <string name="vector_ek5z">vector_ek5</string>
    <string name="_420_comments_string">420 Comments</string>
    <string name="user_string">User</string>
    <string name="comment_string">Comment</string>
    <string name="_03_23_string">03-23</string>
    <string name="img_group_69">__img___group_69</string>
    <string name="img_group_68">__img___group_68</string>
    <string name="img_group_72">__img___group_72</string>
    <string name="img_group_73">__img___group_73</string>
    <string name="img_group_74">__img___group_74</string>
    <string name="img_group_75">__img___group_75</string>
    <string name="img_group_76">__img___group_76</string>
    <string name="img_group_77">__img___group_77</string>
    <string name="premium_string">Premium</string>
    <string name="home_string">Home</string>
    <string name="mentor_string">Mentor</string>
    <string name="__about__string">"About"</string>
    <string name="_5_string">5</string>
    <string name="student_string">Student</string>
    <string name="upcoming_meetings_string">Upcoming meetings</string>
    <string name="mentor_b_string">Mentor B</string>
    <string name="__case__string">"case"</string>
    <string name="mentor_a_string">Mentor A</string>
    <string name="__case__ek1_string">"case"</string>
    <string name="follower_string">Follower</string>
    <string name="_2k_string">2k</string>
    <string name="like_string">Like</string>
    <string name="follow_string">Follow</string>
    <string name="connect_string">Connect</string>
    <string name="vector_1">vector_1</string>
    <string name="vectorx">vector</string>
    <string name="vector_1z">vector_1</string>
    <string name="img_group_16">__img___group_16</string>
    <string name="img_group_17">__img___group_17</string>
    <string name="img_group_18">__img___group_18</string>
    <string name="img_group_19">__img___group_19</string>
    <string name="img_group_20">__img___group_20</string>
    <string name="search_string">Search</string>
    <string name="how_to_center_div_string">How to center Div</string>
    <string name="docker_string">docker</string>
    <string name="amazon_web_service_string">amazon web service</string>
    <string name="what_happen_in_world_war_2_string">what happen in world war 2</string>
    <string name="pascal_law_string">pascal law</string>
    <string name="trigonometry_string">trigonometry</string>
    <string name="past_tense_string">past tense</string>
    <string name="mentor_ek1_string">Mentor</string>
    <string name="description_ek1_string">Description</string>
    <string name="mentor_ek2_string">Mentor</string>
    <string name="description_ek2_string">Description</string>
    <string name="mentor_ek3_string">Mentor</string>
    <string name="description_ek3_string">Description</string>
    <string name="send_a_message____string">Send a message...</string>
    <string name="add_title_string">Add title</string>
    <string name="meeting_string">Meeting</string>
    <string name="friday__june_16_string">Friday, June 16</string>
    <string name="add_google_meet_string">Add Google Meet</string>
    <string name="save_string">Save</string>
    <string name="add_description_or_attachments_string">Add description or attachments</string>
    <string name="_6_00am___8_00am_string">6:00am - 8:00am</string>
    <string name="student_b_string">Student B</string>
    <string name="vectorc">vector</string>
    <string name="vector_ek1x">vector_ek1</string>
    <string name="img_group_55">__img___group_55</string>
    <string name="img_group_56">__img___group_56</string>
    <string name="vectorv">vector</string>
    <string name="vector_ek1v">vector_ek1</string>
    <string name="vector_ek2v">vector_ek2</string>
    <string name="vector_ek3c">vector_ek3</string>
    <string name="vector_ek4x">vector_ek4</string>
    <string name="vector_ek5x">vector_ek5</string>
    <string name="vector_ek6x">vector_ek6</string>
    <string name="rectangle_13c">rectangle_13</string>
    <string name="vector_ek7c">vector_ek7</string>
    <string name="vector_ek8x">vector_ek8</string>
    <string name="vector_ek9">vector_ek9</string>
    <string name="vectorb">vector</string>
    <string name="vector_ek1m">vector_ek1</string>
    <string name="vector_ek3v">vector_ek3</string>
    <string name="vector_ek2b">vector_ek2</string>
    <string name="vector_3f">vector_3</string>
    <string name="vectorm">vector</string>
    <string name="vector_ek1a">vector_ek1</string>
    <string name="vector_ek2a">vector_ek2</string>
    <string name="vector_ek3a">vector_ek3</string>
    <string name="vector_ek4a">vector_ek4</string>
    <string name="vector_ek5a">vector_ek5</string>
    <string name="vectorq">vector</string>
    <string name="rectangle_13q">rectangle_13</string>
    <string name="vector_ek1q">vector_ek1</string>
    <string name="vector_ek2q">vector_ek2</string>
    <string name="vector_ek3q">vector_ek3</string>
    <string name="vector_ek4q">vector_ek4</string>
    <string name="vector_ek5q">vector_ek5</string>
    <string name="img_group_84">__img___group_84</string>
    <string name="img_group_85">__img___group_85</string>
    <string name="vector_ek6q">vector_ek6</string>
    <string name="vector_ek7q">vector_ek7</string>
    <string name="vector_ek8q">vector_ek8</string>
    <string name="vector_ek9q">vector_ek9</string>
    <string name="vector_ek10">vector_ek10</string>
    <string name="vector_ek11">vector_ek11</string>
    <string name="vector_ek12">vector_ek12</string>
    <string name="vector_ek13">vector_ek13</string>
    <string name="vector_ek14">vector_ek14</string>
    <string name="vector_ek15">vector_ek15</string>
    <string name="vector_ek16">vector_ek16</string>
    <string name="vector_ek17">vector_ek17</string>
    <string name="_2_string">2</string>
    <string name="_3hr_5min_string">3hr 5min</string>
    <string name="watchtime_string">Watchtime</string>
    <string name="_16_01_string">16.01</string>
    <string name="mentor_2_string">Mentor 2</string>
    <string name="student_a_string">Student A </string>
    <string name="edit_picture_string">Edit picture</string>
    <string name="name_string">Name</string>
    <string name="issabelle_michelle_merry_string">Issabelle Michelle Merry</string>
    <string name="bishoujou_senpai_string">Bishoujou_Senpai</string>
    <string name="bio_string">Bio</string>
    <string name="gender_string">Gender</string>
    <string name="female_string">Female</string>
    <string name="preference_string">Preference</string>
    <string name="programming_string">Programming</string>
    <string name="edit_profile_string">Edit profile</string>
    <string name="account_string">Account</string>
    <string name="privacy_string">Privacy</string>
    <string name="security_string">Security</string>
    <string name="notification_string">Notification</string>
    <string name="language_string">Language</string>
    <string name="balance_string">Balance</string>
    <string name="setting_string">Setting</string>
    <string name="chat_send">Send</string>
    <string name="emailNameHint">E-mail</string>

</resources>